Docs - small tweak to home top band padding

--- a/apps/bolt-site/templates/site.scss
+++ b/apps/bolt-site/templates/site.scss
@@ -196,6 +196,7 @@ $storefront-sidebar-width: 320px;
   > bolt-band:first-child {
     margin-bottom: 0;
     padding-bottom: 0;
+    padding-top: 0;
   }
 
   .storefront-docs__content--has-sidebar & {
