chore: folding in a bunch of misc v1.0 fixes prior to release

--- a/apps/pattern-lab/src/_patterns/02-components/headline/30-headline-link-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/30-headline-link-variations.twig
@@ -10,3 +10,9 @@
     name: "search"
   }
 } only %}
+
+{% include "@bolt-components-headline/headline.twig" with {
+  text: "This headline is also a link, without an Icon",
+  url: "https://www.google.com",
+  icon: false
+} only %}
