--- a/packages/components/bolt-headline/src/subheadline.twig
+++ b/packages/components/bolt-headline/src/subheadline.twig
@@ -13,3 +13,6 @@
 {% set sizes = ["xxlarge", "xlarge"] %}
 {% set size = size | default("xlarge") %}
 {% set weight = "regular" %}
+
+{% set styles = ["normal", "italic"] %}
+{% set style = style | default("normal") %}
