--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -89,11 +89,11 @@
     {% endif %}
   </div>
 
-  <div class="c-bolt-docs__page-nav u-bolt-padding-right-medium@small">
+  <div class="c-bolt-docs__page-nav u-bolt-padding-right-medium@medium">
     <ul class="o-bolt-ui-list o-bolt-ui-list--xsmall">
       <li class="o-bolt-ui-list__item">
         <ul class="o-bolt-ui-list o-bolt-ui-list--xxsmall o-bolt-ui-list--borderless">
-          {% if readme %}
+          {% if readmeFile %}
             <li class="o-bolt-ui-list__item">
               {% include "@bolt/headline.twig" with {
                 size: "xsmall",
@@ -102,8 +102,13 @@
                 tag: "h3",
                 url: "#getting-started",
                 text: "Getting Started",
-                icon: false
-              } %}
+                icon: false,
+                attributes: {
+                  class: [
+                    "u-bolt-margin-bottom-none",
+                  ]
+                }
+              } only %}
             </li>
           {% endif %}
 
@@ -116,8 +121,33 @@
                 tag: "h3",
                 url: "#usage",
                 text: "Usage",
-                icon: false
-              } %}
+                icon: false,
+                attributes: {
+                  class: [
+                    "u-bolt-margin-bottom-none",
+                  ]
+                }
+              } only %}
+            </li>
+          {% endif %}
+
+
+          {% if schema %}
+            <li class="o-bolt-ui-list__item">
+              {% include "@bolt/headline.twig" with {
+                size: "xsmall",
+                transform: "capitalize",
+                weight: "regular",
+                tag: "h3",
+                url: "#schema",
+                text: "Schema",
+                icon: false,
+                attributes: {
+                  class: [
+                    "u-bolt-margin-bottom-none",
+                  ]
+                }
+              } only %}
             </li>
           {% endif %}
         </ul>
