--- a/apps/pattern-lab/src/_patterns/02-components/headline/20-headline-style-and-weight-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/20-headline-style-and-weight-variations.twig
@@ -1,12 +1,29 @@
 {% set schema = get_data('@bolt-components-headline/headline.schema.yml') %}
 
-{% for weight in schema.properties.weight.enum %}
-  {% for style in schema.properties.style.enum %}
+{% for size in schema.properties.size.enum %}
+  {% for weight in schema.properties.weight.enum %}
+    {% for style in schema.properties.style.enum %}
     {% include "@bolt-components-headline/text.twig" with {
       text: "This is " ~ weight ~ " weight and " ~ style ~ " text",
-      weight: weight,
-      style: style,
-      size: 'xlarge',
-    } only %}
+        weight: weight,
+        style: style,
+        size: size,
+      } only %}
+
+      {% include "@bolt-components-headline/headline.twig" with {
+        text: "This is " ~ weight ~ " weight and " ~ style ~ " headline",
+        weight: weight,
+        style: style,
+        size: size,
+      } only %}
+
+      {% include "@bolt-components-headline/subheadline.twig" with {
+        text: "This is " ~ weight ~ " weight and " ~ style ~ " subheadline",
+        weight: weight,
+        style: style,
+        size: size
+      } only %}
+
+    {% endfor %}
   {% endfor %}
 {% endfor %}
