--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -59,7 +59,7 @@
   url ? baseClass ~ "--link" : ""
 ] %}
 
-{% if url and icon.name is null %}
+{% if url and icon != null %}
   {% set icon = icon | default({}) | merge({
     name: "chevron-right"
   }) %}
