--- a/packages/components/bolt-headline/src/all-headlines.scss
+++ b/packages/components/bolt-headline/src/all-headlines.scss
@@ -23,7 +23,6 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 }
 
 .c-bolt-headline {
-  @include bolt-font-weight(bold);
 
   &:not(:last-child) {
     @include bolt-margin-bottom(medium);
@@ -175,8 +174,7 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 }
 
 
-.c-bolt-text--uppercase,
-.c-bolt-headline--small {
+.c-bolt-text--uppercase {
   @include bolt-uppercase;
 }
 
