--- a/packages/components/bolt-headline/src/headline.twig
+++ b/packages/components/bolt-headline/src/headline.twig
@@ -1,6 +1,10 @@
 {% extends "@bolt/_typography.twig" %}
 {% set tags = ["h1", "h2", "h3", "h4", "h5", "h6", "p", "span"] %} {# Allowed Tags #}
 {% set type = "headline" %}
+
+{% set styles = ["normal", "italic"] %}
+{% set style = style | default("normal") %}
+
 {% set tags = [
   "h1",
   "h2",
@@ -18,6 +22,13 @@
   "xxlarge",
   "xxxlarge"
 ] %}
+
 {% set size = size | default("xlarge") %}
+
+{# replicate existing functionality where small headlines are uppercase by default - however allow this to still be overwritten if specified #}
+{% if size == "small" %}
+  {% set transform = transform | default("uppercase") %}
+{% endif %}
+
 {% set weight = weight | default("bold") %}
 {% set tag = tag | default("h2") %}
