--- a/packages/components/bolt-link/src/link.twig
+++ b/packages/components/bolt-link/src/link.twig
@@ -26,7 +26,7 @@
   {% endif %}
 
   <a {{ attributes }}>
-    {% if icon and icon.position == "before" %}
+    {% if icon and icon != false and icon.position == "before" %}
       <span class="c-bolt-link__icon">
         {% include "@bolt/icon.twig" with icon only %}
       </span>
@@ -35,8 +35,8 @@
     <span class="c-bolt-link__text">
       {{ text | default(label) | default("Learn More") }}
     </span>
-      
-    {% if icon and icon.position != "before" %}
+
+    {% if icon and icon != false and icon.position != "before" %}
       <span class="c-bolt-link__icon">
         {% include "@bolt/icon.twig" with icon only %}
       </span>
