fix: adding js build fix locally + fixing broken image path

--- a/apps/pattern-lab/src/_patterns/04-page-examples/30-product-pages/product-landing-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-page-examples/30-product-pages/product-landing-page.twig
@@ -20,7 +20,7 @@
       },
       contentItems: [{
         pattern: "image",
-        src: "/assets/images/content/backgrounds/background-short-1.jpg",
+        src: "../../images/content/backgrounds/background-short-1.jpg",
         lazyload: false
       }]
     },
