--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -1,8 +1,7 @@
 // PL only styles
 @import "@bolt/core";
-@import "../_patterns/01-styleguide/color-palette/_color-swatch";
+@import "../_patterns/**/*.scss";
 @import "*.scss";
-@import '../_patterns/04-page-examples/50-pega-world/**/*.scss';
 
 bolt-demo {
   display: block;
