--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -135,7 +135,8 @@
             pattern: "button",
             width: "full",
             text: "View the pattern library",
-            style: "secondary"
+            style: "secondary",
+            url: "pattern-lab",
           }
         ]
         },
@@ -165,7 +166,7 @@
             {
               text: "Get started with Bolt",
               style: "secondary",
-              url: ""
+              url: "/docs/getting-started/index.html",
             }
           ]
           }
@@ -197,7 +198,7 @@
             {
               text: "Visit the component docs",
               style: "secondary",
-              url: ""
+              url: "/docs/index.html",
             }
           ]
           }
@@ -257,6 +258,56 @@
     {% include "@bolt-components-band/band.twig" with {
       content: availableComponents,
       theme: "xlight",
+    } only %}
+
+    {% set actionBlocks %}
+      {% include "@bolt/headline.twig" with {
+        text: "Let's get this show on the road!",
+        tag: "h2",
+        size: "xxlarge",
+        align: "center"
+      } only %}
+      {% include "@bolt/subheadline.twig" with {
+        tag: "h3",
+        text: "Jump right in:",
+        size: "xlarge",
+        align: "center"
+      } only %}
+      {% include "@bolt-components-action-blocks/action-blocks.twig" with {
+        contentItems: [
+          {
+            text: "Item 1",
+            url: "http://google.com",
+            icon: {
+            name: "download",
+            size: "large",
+            background: "circle"
+          }
+          },
+          {
+            text: "Item 2",
+            url: "http://google.com",
+            icon: {
+            name: "copy-to-clipboard",
+            size: "large",
+            background: "circle"
+          }
+          },
+          {
+            text: "Item 3",
+            url: "http://google.com",
+            icon: {
+            name: "calendar",
+            size: "large",
+            background: "circle"
+          }
+          }
+        ]
+      } only %}
+    {% endset %}
+    {% include "@bolt-components-band/band.twig" with {
+      content: actionBlocks,
+      theme: "xdark",
     } only %}
 
     {% set blockquoteContent %}
