Docs - homepage action blocks

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -276,31 +276,49 @@
       {% include "@bolt-components-action-blocks/action-blocks.twig" with {
         contentItems: [
           {
-            text: "Item 1",
-            url: "http://google.com",
+            text: "Getting Started",
+            url: "/docs/getting-started/index.html",
             icon: {
-            name: "download",
-            size: "large",
-            background: "circle"
-          }
+              name: "energy",
+              size: "large",
+              background: "circle"
+            }
           },
           {
-            text: "Item 2",
-            url: "http://google.com",
+            text: "Configuration",
+            url: "/docs/config/index.html",
             icon: {
-            name: "copy-to-clipboard",
-            size: "large",
-            background: "circle"
-          }
+              name: "info-open",
+              size: "large",
+              background: "circle"
+            }
           },
           {
-            text: "Item 3",
-            url: "http://google.com",
+            text: "Concepts",
+            url: "/docs/concepts/index.html",
             icon: {
-            name: "calendar",
-            size: "large",
-            background: "circle"
-          }
+              name: "data-integrations",
+              size: "large",
+              background: "circle"
+            }
+          },
+          {
+            text: "Guides",
+            url: "/docs/guides/index.html",
+            icon: {
+              name: "robo-auto",
+              size: "large",
+              background: "circle"
+            }
+          },
+          {
+            text: "API",
+            url: "/docs/api/index.html",
+            icon: {
+              name: "customer-decision-hub",
+              size: "large",
+              background: "circle"
+            }
           }
         ]
       } only %}
