--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -119,6 +119,10 @@
             src: "/images/single-source2.jpg"
           },
           {
+            pattern: "eyebrow",
+            text: "Docs"
+          },
+          {
             pattern: "headline",
             text: "Living, cohesive design language",
             size: "large",
@@ -131,7 +135,8 @@
             pattern: "button",
             width: "full",
             text: "View the pattern library",
-            style: "secondary"
+            style: "secondary",
+            url: "pattern-lab",
           }
         ]
         },
@@ -142,6 +147,10 @@
             pattern: "image",
             lazyload: false,
             src: "/images/code2.jpg"
+          },
+          {
+            pattern: "eyebrow",
+            text: "Docs"
           },
           {
             pattern: "teaser",
@@ -157,7 +166,7 @@
             {
               text: "Get started with Bolt",
               style: "secondary",
-              url: ""
+              url: "/docs/getting-started/index.html",
             }
           ]
           }
@@ -170,6 +179,10 @@
             pattern: "image",
             lazyload: false,
             src: "/images/tested.jpg"
+          },
+          {
+            pattern: "eyebrow",
+            text: "Docs"
           },
           {
             pattern: "teaser",
@@ -185,7 +198,7 @@
             {
               text: "Visit the component docs",
               style: "secondary",
-              url: ""
+              url: "/docs/index.html",
             }
           ]
           }
@@ -193,6 +206,148 @@
         }
       ]
     } %}
+
+    {% set availableComponents %}
+      {% include "@bolt/headline.twig" with {
+        text: "Bolt components",
+        tag: "h2",
+        size: "xxlarge"
+      } only %}
+      {% include "@bolt/subheadline.twig" with {
+        tag: "h3",
+        text: "Current available inventory of reusable components available within latest Bolt:",
+        size: "xlarge"
+      } only %}
+      {% set listComponents = [
+        { text: "@bolt/core" },
+        { text: "@bolt/global" },
+        { text: "@bolt/components-action-blocks" },
+        { text: "@bolt/components-background" },
+        { text: "@bolt/components-background-shapes" },
+        { text: "@bolt/components-band" },
+        { text: "@bolt/components-blockquote" },
+        { text: "@bolt/components-breadcrumb" },
+        { text: "@bolt/components-button" },
+        { text: "@bolt/components-button-group" },
+        { text: "@bolt/components-card" },
+        { text: "@bolt/components-chip" },
+        { text: "@bolt/components-chip-list" },
+        { text: "@bolt/components-device-viewer" },
+        { text: "@bolt/components-figure" },
+        { text: "@bolt/components-icon" },
+        { text: "@bolt/components-headline" },
+        { text: "@bolt/components-image" },
+        { text: "@bolt/components-link" },
+        { text: "@bolt/components-logo" },
+        { text: "@bolt/components-nav-bar" },
+        { text: "@bolt/components-ordered-list" },
+        { text: "@bolt/components-page-footer" },
+        { text: "@bolt/components-page-header" },
+        { text: "@bolt/components-site" },
+        { text: "@bolt/components-smooth-scroll" },
+        { text: "@bolt/components-sticky" },
+        { text: "@bolt/components-teaser" },
+        { text: "@bolt/components-unordered-list" }
+      ] %}
+      {% if listComponents|length > 0 %}
+        {% include "@bolt-components-chip-list/chip-list.twig" with {
+          contentItems: listComponents
+        } only %}
+      {% endif %}
+    {% endset %}
+    {% include "@bolt-components-band/band.twig" with {
+      content: availableComponents,
+      theme: "xlight",
+    } only %}
+
+    {% set actionBlocks %}
+      {% include "@bolt/headline.twig" with {
+        text: "Let's get this show on the road!",
+        tag: "h2",
+        size: "xxlarge",
+        align: "center"
+      } only %}
+      {% include "@bolt/subheadline.twig" with {
+        tag: "h3",
+        text: "Jump right in:",
+        size: "xlarge",
+        align: "center"
+      } only %}
+      {% include "@bolt-components-action-blocks/action-blocks.twig" with {
+        contentItems: [
+          {
+            text: "Getting Started",
+            url: "/docs/getting-started/index.html",
+            icon: {
+              name: "energy",
+              size: "large",
+              background: "circle"
+            }
+          },
+          {
+            text: "Configuration",
+            url: "/docs/config/index.html",
+            icon: {
+              name: "info-open",
+              size: "large",
+              background: "circle"
+            }
+          },
+          {
+            text: "Concepts",
+            url: "/docs/concepts/index.html",
+            icon: {
+              name: "data-integrations",
+              size: "large",
+              background: "circle"
+            }
+          },
+          {
+            text: "Guides",
+            url: "/docs/guides/index.html",
+            icon: {
+              name: "robo-auto",
+              size: "large",
+              background: "circle"
+            }
+          },
+          {
+            text: "API",
+            url: "/docs/api/index.html",
+            icon: {
+              name: "customer-decision-hub",
+              size: "large",
+              background: "circle"
+            }
+          }
+        ]
+      } only %}
+    {% endset %}
+    {% include "@bolt-components-band/band.twig" with {
+      content: actionBlocks,
+      theme: "xdark",
+    } only %}
+
+    {% set blockquoteContent %}
+      {% include "@bolt-components-blockquote/blockquote.twig" with {
+        alignItems: "center",
+        border: "none",
+        content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
+        author: {
+          image: {
+            src: "https://avatars0.githubusercontent.com/u/1617209?s=400&v=4",
+            lazyload: false
+          },
+          name: "Salem Ghoweri",
+          title: "Senior Front-end Architect, Design Systems at Pega"
+        }
+      } %}
+    {% endset %}
+    {% include "@bolt-components-band/band.twig" with {
+      content: blockquoteContent,
+      theme: "dark",
+    } only %}
+
   </article>
 {% endset %}
 {% include 'site.twig' with {
