--- a/apps/bolt-site/templates/site.scss
+++ b/apps/bolt-site/templates/site.scss
@@ -67,12 +67,12 @@ $storefront-sidebar-width: 320px;
   }
 
   &.scrolled {
-    box-shadow: 0 0 10px var(--bolt-theme-background);
+    box-shadow: 0 0 10px #000;
 
     .c-bolt-headline {
       opacity: 1;
       @media (max-width: 1000px) {
-        box-shadow: 0 0 10px var(--bolt-theme-background);
+        box-shadow: 0 0 10px #000;
       }
     }
   }
@@ -193,6 +193,11 @@ $storefront-sidebar-width: 320px;
   padding: 0 0 0 0;
   transition: margin .4s;
 
+  > bolt-band:first-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
   .storefront-docs__content--has-sidebar & {
     @include respond-to(medium) {
       margin-left: $storefront-sidebar-width;
@@ -269,4 +274,8 @@ pre > code {
   @include respond-to(small) {
     display: block !important;
   }
+}
+
+.u-bolt-padding-top-none {
+  padding-top: 0 !important;
 }
