--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -1,5 +1,5 @@
 
-{# 
+{#
   Bolt Image - Structure:
   - .c-bolt-image: uses the ratio object as a base if enabled
     - .c-bolt-image__img: lazyloaded img tag
@@ -8,8 +8,11 @@
 
 
 
-{% set srcset = srcset ?? "" %}
-{% set imageSizes = globalBoltImageSizes %}
+{% set srcset = srcset ? srcset : src %}
+{# @todo DRY this #}
+{% set imageSizes = [
+  50, 100, 200, 320, 480, 640, 800, 1024, 1366, 1536, 1920, 2560, 2880
+] %}
 
 {% if placeholderImage is empty or placeholderColor is empty or srcset == "" %}
   {% set path = publicpath(src|split('.' ~ ext)|first) %}
@@ -21,20 +24,23 @@
 
 {# smaller image src used for calculating color -- already resized for less of a perf hit #}
 {% if placeholderImage is empty or placeholderColor is empty %}
-  {% set sampleImageSrc = path ~ '-' ~ globalBoltImageSizes[0] ~ '.' ~ ext %}
+  {% if path %}
+    {% set sampleImageSrc = path ~ '-' ~ imageSizes[0] ~ '.' ~ ext %}
 
-  {% if placeholderImage is empty %}
-    {% set placeholderImage = base64(sampleImageSrc) %}
-  {% endif %}
+    {% if placeholderImage is empty %}
+      {% set placeholderImage = base64(sampleImageSrc) %}
+    {% endif %}
 
-  {# only calculate a placeholder color if not using a placeholder image #}
-  {% if placeholderColor is empty %}
-    {% set placeholderColor = bgcolor(sampleImageSrc) %}
+    {# only calculate a placeholder color if not using a placeholder image #}
+    {% if placeholderColor is empty %}
+      {% set placeholderColor = bgcolor(sampleImageSrc) %}
+    {% endif %}
   {% endif %}
 {% endif %}
 
 {% if height is empty %}
   {% set height = ratio(src, 'height') %}
+
 {% endif %}
 
 {% if width is empty %}
@@ -56,7 +62,7 @@
     } only %}
   {% endset %}
   {% set gcd = gcd | escape | raw | number_format %}
-  
+
   {% if gcd != 0 and height != 0 and width != 0 %}
     {% set imageHeightRatio = (height / gcd) %}
     {% set imageWidthRatio = (width / gcd) %}
@@ -77,6 +83,15 @@
 
   {% if srcset == "" and ext != "svg" %}
     {% for size in imageSizes if (size <= width) %}
+
+      {% if path %}
+      {% else %}
+        {% set x = ['YOLO'] %}
+        {{ console_log(x) }}
+        {{ console_log(_context) }}
+        {% set path = src %}
+      {% endif %}
+
       {% if size == width %}
         {% set srcset = srcset ~ '../..' ~ path ~ '.' ~ ext ~ ' ' ~ size ~ 'w' ~ ', ' %}
         {% set zoomSource = path ~ '.' ~ ext %}
@@ -86,7 +101,7 @@
       {% endif %}
 
       {# store the current srcset path just in case this loop is our last -- loop.last var isn't available w/ conditions #}
-      
+
     {% endfor %}
     {% set srcset = srcset|trim(', ') %}
   {% elseif ext == "svg" %}
@@ -96,19 +111,17 @@
 {% set attributes = create_attribute(attributes | default({})).addClass('c-bolt-image') %}
 
 {% set imageAttributes = create_attribute(imageAttributes | default({})).addClass([
-    "c-bolt-image__img",
-    lazyload ? "js-lazyload" : "",
-    lazyload ? "is-lazyloading" : ""
-  ])
-  .setAttribute('alt', alt)
-%}
+  "c-bolt-image__img",
+  lazyload ? "js-lazyload" : "",
+  lazyload ? "is-lazyloading" : ""
+])
+  .setAttribute('alt', alt) %}
 
 
 
 {% if zoom %}
   {% set imageAttributes = imageAttributes
-    .setAttribute("data-zoom", zoomSource)
-  %}
+    .setAttribute("data-zoom", zoomSource) %}
 {% endif %}
 
 
@@ -116,18 +129,16 @@
   {% set imageAttributes = imageAttributes
     .setAttribute("data-srcset", srcset)
     .setAttribute("srcset", placeholderDummySrc)
-    .setAttribute("data-sizes", sizes)
-  %}
+    .setAttribute("data-sizes", sizes) %}
 {% else %}
   {% set imageAttributes = imageAttributes.setAttribute("srcset", srcset) %}
 {% endif %}
 
 {% set placeholderAttributes = create_attribute(placeholderAttributes | default({})).addClass("c-bolt-image__placeholder") %}
 {% set styles = placeholderAttributes.getAttribute('style') | split(' ') | merge([
-    placeholderColor ? "background-color: #{placeholderColor};" : "",
-    placeholderImage ? "background-image: url(#{placeholderImage});" : ""
-  ])
-%}
+  placeholderColor ? "background-color: #{placeholderColor};" : "",
+  placeholderImage ? "background-image: url(#{placeholderImage});" : ""
+]) %}
 {% set placeholderAttributes = placeholderAttributes.setAttribute('style', styles) %}
 
 {% set imageTag %}
