fix: further fixes to image fix work

--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
@@ -21,7 +21,7 @@
       contentItems: [{
         pattern: "image",
         src: "../../images/content/backgrounds/background-short-1.jpg",
-        lazyload: false
+        lazyload: true
       }]
     },
     primaryTeaser: {
@@ -211,7 +211,7 @@
       {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
         {% include "@bolt/image.twig" with {
           src: "../../images/content/charts/decision-hub-chart.png",
-          lazyload: false
+          lazyload: true
         } only %}
       {% endcell %}
 
@@ -253,7 +253,7 @@
       "pattern": "card",
       "image": {
         "src": "../../images/content/promos/promo-16x9-anthem.jpg",
-        "lazyload": false
+        "lazyload": true
       },
       "teaser": {
         "eyebrow": {
@@ -261,7 +261,7 @@
         },
         "logo": {
           src: "../../images/content/logos/logo-paypal.svg",
-          lazyload: false
+          lazyload: true
         },
         "headlines": [
           {
@@ -285,7 +285,7 @@
       "pattern": "card",
       "image": {
         "src": "../../images/content/promos/promo-16x9-anthem.jpg",
-        "lazyload": false
+        "lazyload": true
       },
       "teaser": {
         "eyebrow": {
@@ -313,7 +313,7 @@
       "pattern": "card",
       "image": {
         "src": "../../images/content/promos/promo-16x9-anthem.jpg",
-        "lazyload": false
+        "lazyload": true
       },
       "teaser": {
         "eyebrow": {
@@ -397,7 +397,7 @@
       {
         "pattern": "image",
         "src": "../../images/content/backgrounds/background-tall-4.jpg",
-        "lazyload": false
+        "lazyload": true
       }
     ]
   }
@@ -416,12 +416,12 @@
           logo: {
             src: "../../images/content/logos/logo-paypal.svg",
             invert: true,
-            lazyload: false
+            lazyload: true
           },
           author: {
             image: {
               src: "../../images/placeholders/500x500.jpg",
-              lazyload: false
+              lazyload: true
             },
             name: "Jessica Cuthbertson",
             title: "CEO, RBS"
