--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -6,9 +6,9 @@
     - .c-bolt-image__placeholder: lazyloader span while the img is lazyloaded.
 #}
 
+{% set srcset = srcset ? srcset : "" %}
 
 
-{% set srcset = srcset ? srcset : src %}
 {# @todo DRY this #}
 {% set imageSizes = [
   50, 100, 200, 320, 480, 640, 800, 1024, 1366, 1536, 1920, 2560, 2880
@@ -17,6 +17,15 @@
 {% if placeholderImage is empty or placeholderColor is empty or srcset == "" %}
   {% set path = publicpath(src|split('.' ~ ext)|first) %}
 {% endif %}
+
+{% if path == "" and ('../' in src) %}
+  {% set path = src|replace({'../': ''}) %}
+  {% set path = '/' ~ path %}
+  {% set path = path|split('.' ~ ext)|first %}
+{% elseif path == "" and srcset == "" %}
+  {% set srcset = src %}
+{% endif %}
+
 
 {% if src %}
   {% set ext = src|split('.')|last %}
@@ -27,13 +36,14 @@
   {% if path %}
     {% set sampleImageSrc = path ~ '-' ~ imageSizes[0] ~ '.' ~ ext %}
 
-    {% if placeholderImage is empty %}
-      {% set placeholderImage = base64(sampleImageSrc) %}
+
+    {% if placeholderImage is empty and ext != 'svg' %}
+      {% set placeholderImage = base64('../..' ~ sampleImageSrc) %}
     {% endif %}
 
     {# only calculate a placeholder color if not using a placeholder image #}
-    {% if placeholderColor is empty %}
-      {% set placeholderColor = bgcolor(sampleImageSrc) %}
+    {% if placeholderColor is empty and ext != 'svg' %}
+      {% set placeholderColor = bgcolor('../..' ~ sampleImageSrc) %}
     {% endif %}
   {% endif %}
 {% endif %}
@@ -55,6 +65,8 @@
 
 {# Get a whole number aspect ratio #}
 {% if width > 0 and height > 0 and ratio == true %}
+  {% set ratio = height / width * 100 ~ '%' %}
+{% endif %}
   {# {% set gcd %}
     {% include '@bolt/gcd.twig' with {
       a: width,
@@ -71,9 +83,7 @@
     {% set imageWidthRatio = 1 %}
   {% endif %} #}
 
-  {% set ratio = height / width * 100 ~ '%' %}
 
-{% endif %}
 
 
 
@@ -83,14 +93,6 @@
 
   {% if srcset == "" and ext != "svg" %}
     {% for size in imageSizes if (size <= width) %}
-
-      {% if path %}
-      {% else %}
-        {% set x = ['YOLO'] %}
-        {{ console_log(x) }}
-        {{ console_log(_context) }}
-        {% set path = src %}
-      {% endif %}
 
       {% if size == width %}
         {% set srcset = srcset ~ '../..' ~ path ~ '.' ~ ext ~ ' ' ~ size ~ 'w' ~ ', ' %}
