--- a/packages/components/bolt-background/src/background.scss
+++ b/packages/components/bolt-background/src/background.scss
@@ -57,6 +57,11 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+
+  > * {
+    flex-grow: 1;
+  }
 }
 
 .c-bolt-background__item--blur {
