--- a/packages/components/bolt-image/src/image.scss
+++ b/packages/components/bolt-image/src/image.scss
@@ -15,7 +15,7 @@ bolt-image {
 
 // Building on top of o-bolt-ratio__item
 .c-bolt-image__img {
-  transition: opacity 0.1s ease;
+  transition: opacity .2s ease;
 
   &.is-lazyloading {
     opacity: 0;
@@ -29,12 +29,13 @@ bolt-image {
 .c-bolt-image__placeholder {
   display: block;
   // position: absolute;
-  // height: 100%;
-  // width: 100%;
+  min-height: 100%;
+  min-width: 100%;
   pointer-events: none;
   background-size: cover;
   background-repeat: no-repeat;
   filter: blur(3px);
+  transform: translate3d(0, 0, 0);
 }
 
 
