fix: fixing image paths

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -116,6 +116,10 @@
           {
             pattern: "image",
             lazyload: false,
+            ratio: false,
+            placeholderImage: "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==",
+            placeholderColor: "#8d8e99",
+            srcset: "/images/single-source2.jpg",
             src: "/images/single-source2.jpg"
           },
           {
@@ -142,7 +146,11 @@
           {
             pattern: "image",
             lazyload: false,
-            src: "/images/code2.jpg"
+            src: "/images/code2.jpg",
+            ratio: false,
+            placeholderImage: "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==",
+            placeholderColor: "#8d8e99",
+            srcset: "/images/code2.jpg"
           },
           {
             pattern: "eyebrow",
@@ -173,7 +181,11 @@
           {
             pattern: "image",
             lazyload: false,
-            src: "/images/tested.jpg"
+            src: "/images/tested.jpg",
+            ratio: false,
+            placeholderImage: "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==",
+            placeholderColor: "#8d8e99",
+            srcset: "/images/tested.jpg"
           },
           {
             pattern: "eyebrow",
@@ -329,7 +341,10 @@
         content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
         author: {
           image: {
-            src: "https://avatars0.githubusercontent.com/u/1617209?s=400&v=4",
+            src: "../../images/500x500.jpg",
+            placeholderImage: "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==",
+            placeholderColor: "#8d8e99",
+            srcset: "../../images/500x500.jpg",
             lazyload: false
           },
           name: "Salem Ghoweri",
