fix: fixing video player version number dependencies

--- a/packages/components/brightcove-player/src/brightcove-meta.scss
+++ b/packages/components/brightcove-player/src/brightcove-meta.scss
@@ -1,7 +1,6 @@
 $bolt-export-data: false !global;
 
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
+@import '@bolt/core';
 
 // Same as max-width of wrapper container
 $bolt-video-meta--max-width: bolt-breakpoint(xxlarge);
