Small tweak to test deploy

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -348,7 +348,7 @@
             lazyload: false
           },
           name: "Salem Ghoweri",
-          title: "Senior Front-end Architect, Design Systems at Pega"
+          title: "Senior Front-End Architect, Design Systems at Pega"
         }
       } %}
     {% endset %}
