Move all image src paths in PL from relative to root relative

--- a/apps/pattern-lab/src/_patterns/02-components/band/35-band-teaser-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/band/35-band-teaser-variation.twig
@@ -3,7 +3,7 @@
     {
       pattern: "teaser",
       logo: {
-        src: "../../images/content/logos/logo-paypal.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         invert: true,
         lazyload: false,
       },
@@ -27,7 +27,7 @@
     {
       pattern: "teaser",
       logo: {
-        src: "../../images/content/logos/logo-paypal.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         invert: true,
         lazyload: false,
       },
@@ -51,7 +51,7 @@
     {
       pattern: "teaser",
       logo: {
-        src: "../../images/content/logos/logo-paypal.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         invert: true,
         lazyload: false,
       },
