--- a/apps/pattern-lab/src/_patterns/02-components/card/10-card-band-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/10-card-band-variation.twig
@@ -31,7 +31,7 @@
     <div class="c-bolt-card">
       <div class="c-bolt-card__image">
         {% include "@bolt-components-image/image.twig" with {
-          src: "../../images/content/promos/promo-16x9-ai.jpg",
+          src: "/pattern-lab/images/content/promos/promo-16x9-ai.jpg",
           lazyload: false,
         } only %}
       </div>
@@ -72,7 +72,7 @@
         contentItems: [
           {
             pattern: "image",
-            src: "../../images/content/promos/promo-16x9-anthem.jpg",
+            src: "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg",
             alt: "Anthem Video",
             lazyload: false,
           },
@@ -113,7 +113,7 @@
         contentItems: [
           {
             pattern: "image",
-            src: "../../images/content/promos/promo-16x9-forrester.jpg",
+            src: "/pattern-lab/images/content/promos/promo-16x9-forrester.jpg",
             alt: "2017 Forrester Wave Report",
             lazyload: false,
           },
@@ -178,7 +178,7 @@
         <div class="c-bolt-card">
           <div class="c-bolt-card__image">
             {% include "@bolt-components-image/image.twig" with {
-              src: "../../images/content/promos/promo-16x9-ai.jpg",
+              src: "/pattern-lab/images/content/promos/promo-16x9-ai.jpg",
               lazyload: false,
             } only %}
           </div>
@@ -219,7 +219,7 @@
           contentItems: [
             {
               pattern: "image",
-              src: "../../images/content/promos/promo-16x9-anthem.jpg",
+              src: "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg",
               alt: "Anthem Video",
               lazyload: false,
             },
@@ -260,7 +260,7 @@
           contentItems: [
             {
               pattern: "image",
-              src: "../../images/content/promos/promo-16x9-forrester.jpg",
+              src: "/pattern-lab/images/content/promos/promo-16x9-forrester.jpg",
               alt: "2017 Forrester Wave Report",
               lazyload: false,
             },
