--- a/apps/pattern-lab/src/_patterns/02-components/device-viewer/20-device-viewer-macbook-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/device-viewer/20-device-viewer-macbook-variation.twig
@@ -1,7 +1,7 @@
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "macbook",
   image: {
-    src: "../../images/content/screenshots/device-screenshot--desktop.jpg",
+    src: "/pattern-lab/images/content/screenshots/device-screenshot--desktop.jpg",
     lazyload: false
   }
 } %}
@@ -10,7 +10,7 @@
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "macbook",
   image: {
-    src: "../../images/content/screenshots/device-screenshot--desktop.jpg",
+    src: "/pattern-lab/images/content/screenshots/device-screenshot--desktop.jpg",
     lazyload: false
   },
   magnify: true
