--- a/apps/pattern-lab/src/_patterns/02-components/logo/00-logo-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/logo/00-logo-docs.twig
@@ -1,7 +1,7 @@
 {% set schema = get_data('@bolt-components-logo/logo.schema.yml') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-logo/logo.twig" with {
-  src: "../../images/content/logos/logo-paypal.svg",
+  src: "/pattern-lab/images/content/logos/logo-paypal.svg",
 } %}
 {% endverbatim %}
 {% endset %}
