--- a/apps/pattern-lab/src/_patterns/02-components/sticky/10-sticky-example-one.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/sticky/10-sticky-example-one.twig
@@ -50,7 +50,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "../../images/content/backgrounds/background-tall-1.jpg"
+          "src": "/pattern-lab/images/content/backgrounds/background-tall-1.jpg"
         }
       ]
     } only %}
