--- a/apps/pattern-lab/src/_patterns/04-pages/20-resource-details-pages/_resource-details-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/20-resource-details-pages/_resource-details-page.twig
@@ -19,7 +19,7 @@
         {# TODO: check if image exists #}
         {% cell 'u-bolt-width-1/1 u-bolt-width-5/12@medium' %}
           {% include "@bolt/image.twig" with {
-            src: "../../images/content/promos/promo-16x9-anthem.jpg",
+            src: "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg",
             lazyload: false
           } only %}
         {% endcell %}
@@ -197,7 +197,7 @@
       {% cell 'u-bolt-width-1/1 u-bolt-width-1/2@medium' %}
          {% include "@bolt/card-w-teaser.twig" with {
             "image": {
-              "src": "../../images/placeholders/1200x660.jpg",
+              "src": "/pattern-lab/images/placeholders/1200x660.jpg",
               "lazyload": false
             },
             "teaser": {
