--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
@@ -20,7 +20,7 @@
       },
       contentItems: [{
         pattern: "image",
-        src: "../../images/content/backgrounds/background-short-1.jpg",
+        src: "/pattern-lab/images/content/backgrounds/background-short-1.jpg",
         lazyload: true
       }]
     },
@@ -210,7 +210,7 @@
 
       {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
         {% include "@bolt/image.twig" with {
-          src: "../../images/content/charts/decision-hub-chart.png",
+          src: "/pattern-lab/images/content/charts/decision-hub-chart.png",
           lazyload: true
         } only %}
       {% endcell %}
@@ -252,7 +252,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": true
       },
       "teaser": {
@@ -260,7 +260,7 @@
           text: "Article"
         },
         "logo": {
-          src: "../../images/content/logos/logo-paypal.svg",
+          src: "/pattern-lab/images/content/logos/logo-paypal.svg",
           lazyload: true
         },
         "headlines": [
@@ -284,7 +284,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": true
       },
       "teaser": {
@@ -312,7 +312,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": true
       },
       "teaser": {
@@ -396,7 +396,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "../../images/content/backgrounds/background-tall-4.jpg",
+        "src": "/pattern-lab/images/content/backgrounds/background-tall-4.jpg",
         "lazyload": true
       }
     ]
@@ -414,13 +414,13 @@
           border: "horizontal",
           alignItems: "center",
           logo: {
-            src: "../../images/content/logos/logo-paypal.svg",
+            src: "/pattern-lab/images/content/logos/logo-paypal.svg",
             invert: true,
             lazyload: true
           },
           author: {
             image: {
-              src: "../../images/placeholders/500x500.jpg",
+              src: "/pattern-lab/images/placeholders/500x500.jpg",
               lazyload: true
             },
             name: "Jessica Cuthbertson",
