--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/30-background-without-overlay.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/30-background-without-overlay.twig
@@ -10,7 +10,7 @@
     contentItems: [
       {
         pattern: "image",
-        src: "../../images/content/backgrounds/background-tall-2.jpg",
+        src: "/pattern-lab/images/content/backgrounds/background-tall-2.jpg",
         lazyload: false
       }
     ]
