--- a/apps/pattern-lab/src/_patterns/02-components/band/30-band-collection-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/band/30-band-collection-variation.twig
@@ -9,7 +9,7 @@
         {
           pattern: "image",
           lazyload: false,
-          src: "../../images/placeholders/1200x660.jpg"
+          src: "/pattern-lab/images/placeholders/1200x660.jpg"
         },
         {
           pattern: "headline",
@@ -34,7 +34,7 @@
     {
       pattern: "card-w-teaser",
       image: {
-        src: "../../images/placeholders/1200x660.jpg",
+        src: "/pattern-lab/images/placeholders/1200x660.jpg",
         lazyload: false,
       },
       teaser: {
@@ -63,7 +63,7 @@
     {
       pattern: "teaser",
       logo: {
-        src: "../../images/content/logos/logo-paypal.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         lazyload: false,
       },
       eyebrow: {
@@ -97,7 +97,7 @@
         {
           pattern: "image",
           lazyload: false,
-          src: "../../images/content/thumbnail-forrester-prevcard.jpg"
+          src: "/pattern-lab/images/content/thumbnail-forrester-prevcard.jpg"
         },
         {
           pattern: "headline",
@@ -123,7 +123,7 @@
         {
           pattern: "image",
           lazyload: false,
-          src: "../../images/placeholders/1200x660.jpg"
+          src: "/pattern-lab/images/placeholders/1200x660.jpg"
         },
         {
           pattern: "teaser",
@@ -151,7 +151,7 @@
         {
           pattern: "image",
           lazyload: false,
-          src: "../../images/placeholders/1200x660.jpg"
+          src: "/pattern-lab/images/placeholders/1200x660.jpg"
         },
         {
           pattern: "teaser",
