--- a/apps/pattern-lab/src/_patterns/02-components/blockquote/30-blockquote-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/blockquote/30-blockquote-theme-variation.twig
@@ -12,12 +12,12 @@
         "fullBleed": true,
         "logo": {
           "invert": "true",
-          "src": "../../images/content/logos/logo-paypal.svg"
+          "src": "/pattern-lab/images/content/logos/logo-paypal.svg"
         },
         "content": "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
         "author": {
           "image": {
-            "src": "../../images/placeholders/500x500.jpg",
+            "src": "/pattern-lab/images/placeholders/500x500.jpg",
             "lazyload": false
           },
           "name": "Michelangelo di Lodovico Buonarroti Simoni",
