--- a/apps/pattern-lab/src/_patterns/02-components/card/00-card-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/00-card-docs.twig
@@ -5,7 +5,7 @@
   contentItems: [
     {
       pattern: "image",
-      src: "../../images/sample/anthem-video.jpg",
+      src: "/pattern-lab/images/sample/anthem-video.jpg",
       imageAttributes: create_attribute(imageAttributes | default({})).addClass("u-bolt-width-1/1"),
       alt: "Anthem Video"
     },
