--- a/apps/pattern-lab/src/_patterns/02-components/card/15-card-with-teaser.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/15-card-with-teaser.twig
@@ -3,7 +3,7 @@
   contentItems: [
     {
       pattern: "image",
-      src: "../../images/placeholders/landscape-16x9-mountains.jpg",
+      src: "/pattern-lab/images/placeholders/landscape-16x9-mountains.jpg",
       imageAttributes: create_attribute(imageAttributes | default({})).addClass("u-bolt-width-1/1"),
       lazyload: false,
       alt: "Anthem Video"
@@ -11,7 +11,7 @@
     {
       pattern: "teaser",
       logo: {
-        src: "../../images/content/logos/logo-paypal.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         lazyload: false,
       },
       content: "Body text. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
