--- a/apps/pattern-lab/src/_patterns/02-components/logo/05-logo.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/logo/05-logo.twig
@@ -1,4 +1,4 @@
 {% include "@bolt-components-logo/logo.twig" with {
-  src: "../../images/content/logos/logo-paypal.svg",
+  src: "/pattern-lab/images/content/logos/logo-paypal.svg",
   lazyload: false,
 } %}
