--- a/apps/pattern-lab/src/_patterns/02-components/logo/10-logo-invert-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/logo/10-logo-invert-variation.twig
@@ -3,7 +3,7 @@
 } %}
   {% block band_content %}
     {% include "@bolt-components-logo/logo.twig" with {
-      src: "../../images/content/logos/logo-paypal.svg",
+      src: "/pattern-lab/images/content/logos/logo-paypal.svg",
       lazyload: false,
       invert: true,
     } %}
