--- a/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-00-homepage.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-00-homepage.twig
@@ -89,7 +89,7 @@
         }
       ],
       logo: {
-        src: "../../images/content/logos/logo-paypal.svg",
+        src: "/pattern-lab/images/content/logos/logo-paypal.svg",
         invert: true,
         lazyload: false
       },
@@ -160,7 +160,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "../../images/placeholders/1200x660.jpg"
+          "src": "/pattern-lab/images/placeholders/1200x660.jpg"
         },
         {
           "pattern": "headline",
@@ -183,7 +183,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "../../images/content/promos/promo-16x9-anthem.jpg"
+        "src": "/pattern-lab/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -218,7 +218,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "../../images/content/promos/promo-16x9-ai.jpg"
+          "src": "/pattern-lab/images/content/promos/promo-16x9-ai.jpg"
         },
         {
           "pattern": "teaser",
@@ -268,7 +268,7 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "../../images/content/promos/promo-16x9-salesforce-vs-pega.png"
+            src: "/pattern-lab/images/content/promos/promo-16x9-salesforce-vs-pega.png"
           } only %}
         {% endcell %}
 
