Ensuring bolt site debug data is not shown on prod

--- a/apps/bolt-site/templates/site.twig
+++ b/apps/bolt-site/templates/site.twig
@@ -191,17 +191,16 @@
 {#<script src="https://www.google-analytics.com/analytics.js" async defer></script>#}
 
 {# Shows Twig Vars in Browser Console #}
-<script type="application/json">{{ _context|json_encode()|raw }}</script>
-<script>
-  (function () {
-    var me = document.currentScript;
-    var jsonScriptTag = me.previousElementSibling.innerHTML;
-    var data = JSON.parse(jsonScriptTag);
-    console.log('Twig vars for this page: ', data);
-    console.table(data.site.pages);
-//        console.table(data.site.pages);
-  })();
-</script>
-
+{% if not bolt.data.config.prod %}
+  <script type="application/json">{{ _context|json_encode()|raw }}</script>
+  <script>
+    (function () {
+      var me = document.currentScript;
+      var jsonScriptTag = me.previousElementSibling.innerHTML;
+      var data = JSON.parse(jsonScriptTag);
+      console.log('Twig vars for this page: ', data);
+    })();
+  </script>
+{% endif %}
 </body>
 </html>
